# crm

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  db.sqlite3  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
audit/: admin.py  models.py  urls.py
audit/api/: urls.py
audit/migrations/: 0001_initial.py
audit/services/: __init__.py
clientes/: admin.py  apps.py  models.py  signals.py  urls.py
clientes/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: managers.py  models.py  urls.py
core/api/: urls.py
core/migrations/: 0001_initial.py
dashboard/: urls.py
dashboard/api/: urls.py
openspec/: config.yaml
openspec/changes/crm-mvp/: design.md  proposal.md  state.yaml  tasks.md
openspec/changes/crm-mvp/specs/crm/: spec.md
openspec/specs/crm/: spec.md
oportunidades/: admin.py  apps.py  models.py  signals.py  urls.py
oportunidades/api/: urls.py
oportunidades/migrations/: 0001_initial.py
oportunidades/services/: pipeline.py
pipeline/: admin.py  apps.py  models.py  signals.py  urls.py
pipeline/api/: urls.py
pipeline/migrations/: 0001_initial.py  0002_etapa.py  0003_seed_default_pipeline.py
specs/000-architecture/: adr-001-bounded-context-apps.md  overview.md  plan.md
specs/000-architecture/contracts/: api.yaml
specs/001-core-foundation/: spec.md  tasks.md
specs/001-crm-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-business-models/: spec.md  tasks.md
specs/003-services-audit/: spec.md  tasks.md
specs/004-auth/: spec.md  tasks.md
specs/005-clientes-api/: spec.md  tasks.md
specs/006-oportunidades-api/: spec.md  tasks.md
specs/007-dashboard/: spec.md  tasks.md
